{
    "version": 1,
    "name": "PlayerControll",
    "maps": [
        {
            "name": "Player",
            "id": "63722efa-cd5b-4d83-9eb2-a370a8fd2439",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5b25ec10-87b8-47c0-89ea-5b80b3d0a48c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "f2f820f1-c41b-45bc-877f-c41c91bf9008",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "1ae115f8-3ad2-49a3-aee7-29ef3e1ae17f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69442c3a-740a-47e7-b356-2bc3fece1ea5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50333b16-7175-475e-88a9-abf394115ebf",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ef7de44-5e0f-40b1-b500-df85bdc5fa3a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}