using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerConstVar
{
    public const string IdleCondition = "Idle";
    public const string JumpCondition = "IsJump";
    public const string SlideCondition = "IsSlide";
    public const string SlideUpCondition = "SlideUp";
    public const string RunCondition = "IsRun";
}
